update keyboard accessiblity

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,17 +1,17 @@
 // Variables
  
 $dark-elements: hsl(209, 23%, 22%);
-$dark-background: hsl(207, 26%, 17%);
-$light-text: hsl(200, 15%, 8%);
+$background-dark: hsl(207, 26%, 17%);
+$text-light: hsl(200, 15%, 8%);
 $light-input: hsl(0, 0%, 52%);
-$light-background: hsl(0, 0%, 98%);
-$dark-text: hsl(0, 0%, 100%);
+$background-light: hsl(0, 0%, 98%);
+$text-dark: hsl(0, 0%, 100%);
 $light-elements: hsl(0, 0%, 100%);
 
 // radius
 $radius: 5px;
-$box-shadow: 0 0 5px darken($light-background, 2%);
-$dark-box-shadow: 0 0 5px darken($dark-background, 2%);
+$box-shadow: 0 0 5px darken($background-light, 2%);
+$dark-box-shadow: 0 0 5px darken($background-dark, 2%);
 
 // breakpoints 
 $mobile: 375px;
